--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,33 @@
 <head>
   <meta charset="utf-8">
   <title>CrudApp</title>
-  <base href="/">
+  <base href="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
-<body>
-  <app-root></app-root>
+<body >
+  <div class="container py-3">
+    <header>
+      <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+        <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+          <a class="me-3 py-2 text-dark text-decoration-none" href="#">Inicio</a>
+          <!-- <a class="me-3 py-2 text-dark text-decoration-none" href="#">Enterprise</a>
+          <a class="me-3 py-2 text-dark text-decoration-none" href="#">Support</a>
+          <a class="py-2 text-dark text-decoration-none" href="#">Pricing</a> -->
+        </nav>
+      </div>
+
+      <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+        <h1 class="display-4 fw-normal">CRUD CON FIREBASE & ANGULAR 2</h1>
+        <p class="fs-5 text-muted">Alumno: Jhonatan Pullaguari</p>
+      </div>
+    </header>
+    <main>
+      <app-root></app-root>
+    </main>
+  </div>
 </body>
 </html>
