--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal">CRUD CON FIREBASE & ANGULAR 2</h1>
+        <h1 class="display-4 fw-normal">CONSULTA DE VACUNACIÓN</h1>
         <p class="fs-5 text-muted">Alumno: Jhonatan Pullaguari</p>
       </div>
     </header>
